# M5-Forecasting

./: .gitignore  Makefile  README.md  README_STREAMLIT.md  docker-compose.yml  pyproject.toml  test_automlforecast_pipeline.py  test_cv_feature_importance.py
config/: default.yaml  development.yaml  preprocessing_default.yaml  streamlit_config.yaml
docs/: cursor_code_review.md  dataset.md  dataset_preprocessing.md  preprocessing_analysis.md  streamlit_tool.md
notebooks/: Dataset.ipynb  EDA.ipynb  Model.ipynb  intermittent_ts.ipynb  intermittent_ts_sample.ipynb  models.ipynb  preprocessing.ipynb
scripts/: run_pipeline.py
src/dataset/: __init__.py  config.py  data_loader.py  main.py
src/dataset/pipelines/: __init__.py  calendar_pipeline.py  feature_pipeline.py  sales_pipeline.py
src/dataset/transformers/: __init__.py  base.py  calendar.py  features.py  sales.py
src/dataset/utils/: __init__.py  helpers.py  logging.py
src/preprocessing/: __init__.py  config.py  data_loader.py  main.py
src/preprocessing/evaluation/: __init__.py  analysis.py  evaluator.py
src/preprocessing/feature_engineering/: __init__.py  calendar_features.py  encoding_features.py  fourier_features.py  scaling_features.py
src/preprocessing/models/: __init__.py  base.py  cv_feature_importance.py  mlforecast_config.py  mlforecast_params.py
src/preprocessing/pipelines/: __init__.py  evaluation_pipeline.py  feature_pipeline.py  modeling_pipeline.py  optimization_pipeline.py
src/preprocessing/transformers/: __init__.py  base.py  encoding.py  fourier.py  scaling.py  temporal.py
src/preprocessing/utils/: __init__.py  logging.py  monitoring.py  validation.py
src/preprocessing/visualization/: __init__.py  evaluation_plots.py  feature_analysis.py  model_visualization.py  time_series_plots.py
src/streamlit/: data_analysis.py  data_processing.py  main.py  model_evaluation.py  monitoring.py  visualizations.py
src/streamlit/utils/: config_utils.py
tests/: test_config.py
